--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "@sty6x/rudder-nav": "^1.0.2"
   }
 }
