--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@sty6x/rudder-nav": "^1.0.2"
+    "@sty6x/rudder-nav": "^1.0.2",
+    "pubsub-js": "^1.9.4"
   }
 }
