--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@sty6x/rudder-nav": "^1.0.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
     "pubsub-js": "^1.9.4"
   }
